welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:11: error: not found: value num
    } else if (nums(i)>max2 & num(i)<max1) {
                              ^